--- a/Style.css
+++ b/Style.css
@@ -3,7 +3,7 @@
     max-width: 960px;
     margin: 0 auto;
     text-align: left;
-    background-color: #eee;
+    background-color: rgb(255, 120, 120);
   }
   
   body {
